--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "license": "MIT",
   "main": "src/index.js",
   "scripts": {
-    "start": "",
+    "start": "concurrently npm:watch npm:dev",
+    "dev": "cd dev && npm run dev",
     "build": "concurrently npm:build:*",
-    "build:components": "postcss --config src/components src/components/index.css -o dist/components.css"
+    "build:components": "postcss --config src/components src/components/index.css -o dist/components.css",
+    "postbuild": "npm run parser",
+    "parser": "node src/parser dist",
+    "watch": "concurrently npm:watch:*",
+    "watch:components": "npm run build:components -- --watch",
+    "watch:parser": "npm run parser -- --watch"
   },
   "keywords": [
     "css",
@@ -21,15 +27,15 @@
     "defaults"
   ],
   "dependencies": {
-    "autoprefixer": "^10.4.13",
     "tailwindcss": "^3.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "chokidar": "^3.5.3",
     "concurrently": "^7.6.0",
-    "css-tree": "^2.3.1",
-    "lightningcss-cli": "^1.17.1",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
+    "postcss-js": "^4.0.0",
     "postcss-nesting": "^10.2.0",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1"
